Překlady pluginů a zpráv ze serveru.